version/0.22/_sources/api/solver/_autosummary/settings/conductive_regions.rst.txt
:orphan:

.. _conductive_regions:

conductive_regions
==================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.conductive_regions.conductive_regions
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

:ref:`add_zone <add_zone>`                               Add thread-real-pair object.

:ref:`list_zone <list_zone>`                            List thread-real-pair object.

:ref:`delete_zone <delete_zone>`                      Delete thread-real-pair object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`contact_resis_child <contact_resis_child>`


.. rubric:: Included in:

======================================   ========================================

Parent                                                                    Summary

======================================   ========================================
:ref:`electric_field <electric_field>`       Enter electric field model settings.

======================================   ========================================

